# kidsnote

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
docs/: usage.md
src/kd/: __init__.py  __main__.py  cli.py
tests/: test_child_config.py
